[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
uuid = { version = "1.7.0", features=["v4", "serde"] }
rand = "0.8.5"
warp = "0.3"
reqwest = "0.11"

[[bin]]
name = "client"
path = "bin/client.rs"